<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CrazyHighBird</string>
    <string name="action_settings">Settings</string>
    <string name="start">Start</string>
    <string name="shop">Shop</string>
    <string name="achievement">Achievement</string>
    <string name="setting">Setting</string>
    <string name="help">Help</string>
    <string name="exit">Exit</string>
    <string name="app_name_game_1">Choose Your Pill!</string>
    <string name="app_name_game_2">shake to load!</string>
    <string name="app_name_game_3">start fighting!</string>
    <string name="app_name_mainmenu">mainmenu</string>

</resources>
