<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/app_name"
        android:textSize="40sp" />

    <Button
        android:id="@+id/button_start"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/start" />

    <Button
        android:id="@+id/button_shop"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_start"
        android:layout_below="@+id/button_start"
        android:layout_marginTop="10dp"
        android:text="@string/shop" />

    <Button
        android:id="@+id/button_achievement"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_shop"
        android:layout_below="@+id/button_shop"
        android:layout_marginTop="10dp"
        android:text="@string/achievement" />

    <Button
        android:id="@+id/button_setting"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_achievement"
        android:layout_below="@+id/button_achievement"
        android:layout_marginTop="10dp"
        android:text="@string/setting" />

    <Button
        android:id="@+id/button_help"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_setting"
        android:layout_below="@+id/button_setting"
        android:layout_marginTop="10dp"
        android:text="@string/help" />

    <Button
        android:id="@+id/button_exitbutton_exit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_help"
        android:layout_below="@+id/button_help"
        android:layout_marginTop="10dp"
        android:text="@string/exit" />

</RelativeLayout>